<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_dialog"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="552dp">

        <TextView
            android:id="@+id/text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/layersSettings_add"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="20sp"
            tools:text="@string/layersSettings_add" />

        <EditText
            android:id="@+id/etAddLayerName"
            style="@style/Input.Settings"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:hint="@string/layersSettings_layerName"
            android:importantForAutofill="no"
            tools:hint="@string/layersSettings_layerName"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swDrawing"
            style="@style/SettingsLabel"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/layer_drawings_image"
            tools:text="@string/layer_drawings_image" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swSymbols"
            style="@style/SettingsLabel"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/layer_symbols_image"
            tools:text="@string/layer_symbols_image" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swText"
            style="@style/SettingsLabel"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/layer_text_image"
            tools:text="@string/layer_text_image" />

        <Button
            android:id="@+id/btn_positive"
            style="@style/Button.Small"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/layersSettings_add"
            tools:text="@string/layersSettings_add" />

        <Button
            android:id="@+id/btn_negative"
            style="@style/Button.Small"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/global_cancel"
            tools:text="Cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>