<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_message_internet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/restore_doYouWant"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reset"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/global_reset"
        app:layout_constraintEnd_toEndOf="@+id/text_message_internet"
        app:layout_constraintStart_toStartOf="@+id/text_message_internet"
        app:layout_constraintTop_toBottomOf="@+id/text_message_internet" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/global_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="@+id/btn_reset"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

</androidx.constraintlayout.widget.ConstraintLayout>