<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="Constants"
            type="com.bytepace.dimusco.utils.ConstantsKt" />

        <import
            alias="Localization"
            type="com.bytepace.dimusco.utils.LocalizationKt" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{Localization.getTranslatedString(context, Constants.STR_GLOBAL_SETTINGS)}" />

        <TextView
            android:id="@+id/txt_setting_general"
            style="@style/SettingsButton"
            android:background="@drawable/bg_settings_button"
            android:onClick="onClickGeneral"
            app:text="@{Constants.STR_GLOBAL_GENERAL}"
            app:drawableStartCompat="@drawable/ic_general"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:ignore="RtlSymmetry"
            tools:text="@string/global_general" />

        <TextView
            android:id="@+id/txt_setting_edit"
            style="@style/SettingsButton"
            android:background="@drawable/bg_settings_button"
            android:onClick="onClickEdit"
            app:text="@{Constants.STR_GLOBAL_EDITORS}"
            app:drawableStartCompat="@drawable/ic_edit_alt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_setting_general"
            tools:ignore="RtlSymmetry"
            tools:text="@string/global_editors" />

        <TextView
            android:id="@+id/txt_setting_layers"
            style="@style/SettingsButton"
            android:onClick="onClickLayers"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_layer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_setting_edit"
            app:text="@{Constants.STR_GLOBAL_LAYERS}"
            tools:ignore="RtlSymmetry"
            tools:text="@string/global_layers" />

        <TextView
            android:id="@+id/txt_setting_language"
            style="@style/SettingsButton"
            android:background="@drawable/bg_settings_button"
            android:onClick="onClickLanguage"
            app:text="@{Constants.STR_GLOBAL_LANGUAGE}"
            app:drawableStartCompat="@drawable/ic_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_setting_layers"
            tools:ignore="RtlSymmetry"
            tools:text="@string/global_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>