<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="552dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/markerSettings_add"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_colors"
            style="@style/SettingsColorsSymbolsList"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:clipToPadding="false" />

        <EditText
            style="@style/Input.Settings"
            android:layout_marginTop="24dp"
            android:digits="0123456789"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_top"
            style="@style/Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/markerSettings_add" />

        <Button
            android:id="@+id/btn_middle"
            style="@style/Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/markerSettings_remove"
            tools:text="@string/markerSettings_remove" />

        <Button
            android:id="@+id/btn_bottom"
            style="@style/Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/global_cancel"
            tools:text="@string/global_cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>